# argus

./: .gitignore  README.md  argus.yml  prowl.yml  pyproject.toml
.github/workflows/: release.yml
reports/: ffmpeg_b09d57c41d.md  jq_fb59f14.md
src/argus/: __init__.py  __main__.py  cli.py  config.py
src/argus/cache/: cross_cutting.py  keys.py  store.py
src/argus/context_builder/: builder.py  framework.py  sanitizers.py  trimmer.py
src/argus/hypothesis/: engine.py  gate.py  prompts.py
src/argus/llm/: __init__.py  budget.py  calibration.py  langchain_client.py  retry.py  sampling.py  schema.py
src/argus/models/: chain.py  context.py  finding.py  hypothesis.py  output.py  poc.py
src/argus/output/: ai_output.py  formatter.py  json_output.py  markdown.py  sarif.py  text.py
src/argus/pipeline/: concurrency.py  orchestrator.py  resume.py
src/argus/recon/: call_graph.py  (+8 more)
src/prowl/: __init__.py  __main__.py  cli.py  config.py
tests/: conftest.py
tests/test_cache/: test_store.py
tests/test_context_builder/: test_builder.py
tests/test_hypothesis/: test_engine.py
tests/test_integration/: test_recon_integration.py
tests/test_llm/: test_langchain_client.py  test_llm_config.py
tests/test_output/: test_formats.py  test_markdown.py
tests/test_pipeline/: test_orchestrator.py
tests/test_recon/: test_call_graph.py  test_exclusions.py  test_extractor.py  test_parser.py  test_scorer.py  test_signals.py
tests/test_suppression/: test_manager.py
tests/test_triage/: test_chain_analyzer.py  test_classifier.py
tests/test_validation/: test_backends.py
(+111 files in other folders)
